data/all_generated_tests/raw_wast_tests/unreachable_UnreachableCodeExecution_1049.wast
;; 10. **Unreachable Post Return:**    - **Description:** Place a return instruction followed by `unreachable` in a function. Ensure the function exits normally without trapping on `unreachable`.    - **Constraint:** Verifies return termination handling.    - **Relation to Unreachable Code Execution:** Ensures that functions exit correctly without executing unreachable code after a return.  These descriptions should help in creating differential tests to identify implementation discrepancies between WebAssembly and wizard_engine regarding handling of the `unreachable` instruction.

(assert_invalid
  (module
    (func (result i32)
      (return (i32.const 42))
      (unreachable)
    )
  )
  "type mismatch"
)